add movement buff in Traits particuliers

--- a/Naheulbeuk/Naheulbeuk.html
+++ b/Naheulbeuk/Naheulbeuk.html
@@ -594,7 +594,8 @@
 							<ul>
 								<li>cou, int, cha, ad, fo</li>
 								<li>at, prd, jet, esq, fouille</li>
-								<li>inge, mphy, mpsy, rm, pr</li>
+								<li>inge, mphy, mpsy, rm</li>
+								<li>pr, mvt (en %)</li>
 							</ul>
 							Ex: COU+2, int-3,cha +4, pr-2
 						</div>
