--- a/Dragoncry/Dragoncry.html
+++ b/Dragoncry/Dragoncry.html
@@ -169,7 +169,7 @@
              <span class="sheet-form-belt2"><input type="text" name="attr_belt4"/>&nbsp;&nbsp;&nbsp;<input type="text" name="attr_belt5"/></span>
                 <textarea name="attr_bag-content"></textarea>
         
-            <span class="sheet-form-armor">
+           <span class="sheet-form-armor">
                 <h4>ARMADURA</h4><br>
                 <label>Cabeza&nbsp;<input type="text" name="attr_head" style="width:50%;"/>&nbsp;&nbsp;<input type="number" name="attr_armor-head" /></label>
                 <label>Torso&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="attr_torso"style="width:50%;" />&nbsp;&nbsp;<input type="number" name="attr_armor-torso" /></label>
@@ -177,7 +177,7 @@
                 <label>Piernas&nbsp;<input type="text" name="attr_legs" style="width:50%;"/>&nbsp;&nbsp;<input type="number" name="attr_armor-legs"/></label>
                 <label>Escudo&nbsp;<input type="text" name="attr_shield" style="width:50%;"/>&nbsp;&nbsp;<input type="number" name="attr_armor-shield"/></label>
                 <label>Otros&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="attr_other" style="width:50%;"/>&nbsp;&nbsp;<input type="number" name="attr_armor-other"/></label>
-                <label>TOTAL&nbsp;&nbsp;<input type="number" name="attr_total-armor"/>&nbsp;&nbsp;<input type="number" name="attr_total-armor2"/></label>
+                <label>TOTAL&nbsp;&nbsp;<input type="number" value="@{armor-head}+@{armor-torso}+@{armor-arm}+@{armor-legs}+@{armor-other}+@{armor-shield}" name="attr_total-armor" disabled="true"/>&nbsp;&nbsp;<input type="number" name="attr_total-armor2"/></label>
                 <span class="sheet-form-magic-object">
                     <h4>OBJETOS MÁGICOS</h4>
                     <textarea name="attr_magic-objects"></textarea>
