Starfinder (simple) bug fix 081019
Corrected Engineering Check roller name. Changed from roll_Escape-Artist-Check to roll_Engineering-Check.

--- a/Starfinder (simple)/Starfinder (simple).html
+++ b/Starfinder (simple)/Starfinder (simple).html
@@ -339,7 +339,7 @@
     					<span class="sheet-table-data-center"><input title="Disguise-note" type="radio" name="attr_Disguise-note" value="@{skill-notes}" /><input title="Disguise-note" type="radio" name="attr_Disguise-note" checked="true" value="" /></span>
 	    			</div>
 		    		<div class="sheet-table-row">
-			    		<span class="sheet-table-data-center"><button style="font-size:100%;" title="Engineering-Check" type="roll" value="&{template:pf_check} {{name=@{character_name}'s}} {{check=Engineering Check}} {{skill_chk=[[1d20 + [[@{Engineering}]] ]]}} {{notes=@{Engineering-note}}}" name="roll_Escape-Artist-Check"></button></span>
+			    		<span class="sheet-table-data-center"><button style="font-size:100%;" title="Engineering-Check" type="roll" value="&{template:pf_check} {{name=@{character_name}'s}} {{check=Engineering Check}} {{skill_chk=[[1d20 + [[@{Engineering}]] ]]}} {{notes=@{Engineering-note}}}" name="roll_Engineering-Check"></button></span>
 				    	<span class="sheet-table-data-center"><input title="Engineering-cs" type="checkbox" name="attr_Engineering-cs" value="1" /></span>
 					    <span class="sheet-table-data-center">†</span>
     					<span class="sheet-table-data-left">Engineering</span>
