Revert "Updating URLs adding Image Alien the Roleplaying Game"
This reverts commit f639b1835ee297039486c28f27cc35fd506f2111.

--- a/Alien Roleplaying Game/Alien-Roleplaying-Game.html
+++ b/Alien Roleplaying Game/Alien-Roleplaying-Game.html
@@ -1,5 +1,4 @@
-<!-- Alien the Roleplaying Game v1.0 The Quick Start Rules 7/28/2019 
-     Alien the Roleplaying Game v1.01 The Quick Start Rules Adjustments 8/04/2019 -->
+<!-- Alien the Roleplaying Game v1.0 The Quick Start Rules 7/28/2019-->
 
 <div class="background-wrap">
     <div class="header-image">&nbsp;</div>
@@ -106,7 +105,7 @@
                 <button type="roll" class="button-skill button-alpha" value="&{template:alien} {{character-name=@{character_name} }} {{roll-name=*( 2d6 )* }} {{roll-dice=[[ 2d6 ]] }}" name="two_die_six" /><span >2d6</span></button>
                 <button type="roll" class="button-skill button-alpha" value="&{template:alien} {{character-name=@{character_name} }} {{roll-name=*( 3d6 )* }} {{roll-dice=[[ 3d6 ]] }}" name="three_die_six" /><span >3d6</span></button>
                 <button type="roll" class="button-skill button-alpha" value="&{template:alien} {{character-name=@{character_name} }} {{roll-name=*( d66 )* }} {{roll-dice=[[ (1d6)*10 + 1d6 ]] }}" name="die_sixty_six" /><span >d66</span></button><br>
-                <button type="roll" class="button-skill button-beta" value="&{template:alien} {{character-name=@{character_name} }} {{roll-name=Panic Roll }} {{roll-dice=[[ 1d6 + @{stress} [ Stress ] ]] }}" name="panic" /><span >Panic</span></button>
+                <button type="roll" class="button-skill button-beta" value="&{template:alien} {{character-name=@{character_name} }} {{roll-name=Panic Roll }} {{roll-dice=[[ 2d6 + @{stress} [ Stress ] ]] }}" name="panic" /><span >Panic</span></button>
                 <button type="roll" class="button-skill button-beta" value="&{template:alien} {{character-name=@{character_name} }} {{roll-name=Initiative: *Card Value* }} {{roll-dice=[[ ?{Card Number|0} &{tracker} ]] }}" name="initiative_card" /><span >Initiative: Card</span></button>
                 <button type="roll" class="button-skill button-beta" value="&{template:alien} {{character-name=@{character_name} }} {{roll-name=Initiative: *Dice Roll* }} {{roll-dice=[[ 2d6 &{tracker} ]] }}" name="initiative_dice" /><span >Initiative: Dice</span></button><br>
                 <button type="roll" class="button-skill button-gamma" value="&{template:alien} {{character-name=@{character_name} }} {{roll-name=Base Dice }} {{base-dice=[[ ?{How Many Base Dice|0} ]] }} {{base-roll-one=[[1d6]] }} {{base-roll-two=[[1d6]] }} {{base-roll-three=[[1d6]] }} {{base-roll-four=[[1d6]] }} {{base-roll-five=[[1d6]] }}  {{base-roll-six=[[1d6]] }} {{base-roll-seven=[[1d6]] }} {{base-roll-eight=[[1d6]] }} {{base-roll-nine=[[1d6]] }} {{base-roll-ten=[[1d6]] }} {{base-roll-eleven=[[1d6]] }} {{base-roll-twelve=[[1d6]] }} {{base-roll-thirteen=[[1d6]] }} {{base-roll-fourteen=[[1d6]] }} {{base-roll-fifteen=[[1d6]] }} {{base-roll-sixteen=[[1d6]] }} {{base-roll-seventeen=[[1d6]] }} {{base-roll-eighteen=[[1d6]] }}" name="base_dice" /><span >Base Dice</span></button>
