--- a/Dragoncry/Dragoncry.html
+++ b/Dragoncry/Dragoncry.html
@@ -8,7 +8,7 @@
             <label class="etiqueta">NOMBRE&nbsp;&nbsp;&nbsp;<input type="text" name="attr_name" /> <label2>&nbsp; PESO&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <input type="number" name="attr_weight" min="0" /> </label2> </label>
             <label class="etiqueta">RAZA &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select name="attr_race"><option>Humano</option><option>Mediano</option><option>Enano</option><option>Semi-orco</option><option>Semi-elfo</option><option>Elfo</option></select><label2 class="etiqueta">&nbsp;&nbsp; ALTURA&nbsp; <input type="number" name="attr_height"  min="0" /> </label2> </label>
             <label class="etiqueta">SUB-RAZA <input type="text" name="attr_sub-breed" /> <label2 class="etiqueta">&nbsp;&nbsp; EDAD&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="number" name="attr_age" /> </label2> </label>
-            <label class="etiqueta">CLASE&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select name="attr_class"><option>Luchador</option><option>Montaraz</option><option>Asesino</option><option>Bardo</option><option>Druida</option><option>Sacerdote</option><option>Arcanista</option></select> <label2 class="etiqueta">&nbsp;&nbsp; GÃNERO&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="attr_class" /> </label2> </label>
+            <label class="etiqueta">CLASE&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<select name="attr_class"><option>Luchador</option><option>Montaraz</option><option>Asesino</option><option>Bardo</option><option>Druida</option><option>Sacerdote</option><option>Arcanista</option></select> <label2 class="etiqueta">&nbsp;&nbsp;GÉNERO&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="attr_gender" /> </label2> </label>
             <label class="etiqueta">ORDEN&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <input type="text" name="attr_fraternity" /> <label2 class="etiqueta">&nbsp;&nbsp; APARIENCIA <input type="text" name="attr_appearance" /> </label2> </label>
         </span>
     </div2>
@@ -169,7 +169,7 @@
              <span class="sheet-form-belt2"><input type="text" name="attr_belt4"/>&nbsp;&nbsp;&nbsp;<input type="text" name="attr_belt5"/></span>
                 <textarea name="attr_bag-content"></textarea>
         
-            <span class="sheet-form-armor">
+           <span class="sheet-form-armor">
                 <h4>ARMADURA</h4><br>
                 <label>Cabeza&nbsp;<input type="text" name="attr_head" style="width:50%;"/>&nbsp;&nbsp;<input type="number" name="attr_armor-head" /></label>
                 <label>Torso&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="attr_torso"style="width:50%;" />&nbsp;&nbsp;<input type="number" name="attr_armor-torso" /></label>
@@ -177,7 +177,7 @@
                 <label>Piernas&nbsp;<input type="text" name="attr_legs" style="width:50%;"/>&nbsp;&nbsp;<input type="number" name="attr_armor-legs"/></label>
                 <label>Escudo&nbsp;<input type="text" name="attr_shield" style="width:50%;"/>&nbsp;&nbsp;<input type="number" name="attr_armor-shield"/></label>
                 <label>Otros&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" name="attr_other" style="width:50%;"/>&nbsp;&nbsp;<input type="number" name="attr_armor-other"/></label>
-                <label>TOTAL&nbsp;&nbsp;<input type="number" name="attr_total-armor"/>&nbsp;&nbsp;<input type="number" name="attr_total-armor2"/></label>
+                <label>TOTAL&nbsp;&nbsp;<input type="number" value="@{armor-head}+@{armor-torso}+@{armor-arm}+@{armor-legs}+@{armor-other}+@{armor-shield}" name="attr_total-armor" disabled="true"/>&nbsp;&nbsp;<input type="number" name="attr_total-armor2"/></label>
                 <span class="sheet-form-magic-object">
                     <h4>OBJETOS MÁGICOS</h4>
                     <textarea name="attr_magic-objects"></textarea>
