Fix unique attr names for powers

--- a/INS-MV_3E/insmv3e.html
+++ b/INS-MV_3E/insmv3e.html
@@ -188,19 +188,19 @@
 					<label>Unique :</label><input type="checkbox" />
 				</div>
 				<div class="large">
-					<input type="text" class="description" placeholder="Description" />
+					<textarea rows="1" name="attr_powerdescription" class="description" placeholder="Description" /></textarea>
 				</div>
 			</div>
 			</fieldset>
 		
 			<h3>Limitations</h3>
 			<fieldset class="repeating_limitations">
-				<input type="text" />
+				<input name="attr_limitation" type="text" />
 			</fieldset>
 			
 			<h3>Pouvoirs de grade</h3>
 			<fieldset class="repeating_pouvoirsgrade">
-				<input type="text" />
+				<input name="attr_gradepower" type="text" />
 			</fieldset>
 		</div>
     </div>
@@ -238,7 +238,7 @@
 			<div>
 			<h3>Armures</h3>
 			<fieldset class="repeating_armures">
-				<input type="text" />
+				<input name="attr_armor" type="text" />
 			</fieldset>
 			</div>
 		</div>
