uc-58 dnd5e: missing i18n tags,charmancer lvlup

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -16978,7 +16978,7 @@
                             </label>
                             <div class="choice custom_subclass">
                                 <label class="hilite">
-                                    <span class="custom_subclass_name" data-i18n="custom-subclass-name:">Custom sublass Name:</span>
+                                    <span class="custom_subclass_name" data-i18n="charmancer-custom-subclass-name:">Custom sublass Name:</span>
                                     <input type="text" name="comp_subclass_name" placeholder="Custom Sublass" required>
                                 </label>
                             </div>
@@ -17018,7 +17018,7 @@
                         </label>
                     </div>
                     <div class="choice row custom_additional_spells custom_subclass">
-                        <label><span data-i18n="additional-cantrips">Additional Cantrips</span>:
+                        <label><span data-i18n="charmancer-additional-cantrips">Additional Cantrips</span>:
                             <input type="number" name="comp_custom_subclass_cantrip_number" min="0" value="0" required>
                             <label class="choice custom_cantrip_list"><span data-i18n="cantrip-list-if-diff">Cantrip List (if different from default class list)</span>:
                                 <select name="comp_custom_subclass_cantrip_list">
@@ -17034,7 +17034,7 @@
                                 </select>
                             </label>
                         </label>
-                        <label><span data-i18n="additional-lvl-1-spells">Additional Level 1 Spells</span>:
+                        <label><span data-i18n="charmancer-additional-lvl-1-spells">Additional Level 1 Spells</span>:
                             <input type="number" name="comp_custom_subclass_spell_number" min="0" value="0" required>
                             <label class="choice custom_spell_list"><span data-i18n="spell-list-if-diff">Spell List (if different from default class list)</span>:
                                 <select name="comp_custom_subclass_spell_list">
