uc-58 dnd5e: missing i18n tags,hp

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.html
@@ -17920,7 +17920,7 @@
                     </div>
                 </div>
                 <div class="levels-hp-row">
-                    <h2>HP</h2>
+                    <h2 data-i18n="hp-u">HP</h2>
                     <input type="number" class="" name="comp_class1_addhp">
                     <input type="hidden" class="hp-flag" name="comp_class1_hp_flag" value="average" />
                     <div class="class1_rollhp" style="display: inline;">
